--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <h3>
 <a id="welcomes" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome.</h3>
 
-<p>This website is contains collection of topics in Data Analytics, Machine Learning, and Data Science using SAS, Python, and R.<!--a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a--></p>
+<p>This website contains a collection of short cookbook-style topics in Data Analytics, Machine Learning, and Data Science using SAS, Python, and R.<!--a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a--></p>
 
 <h3>
 <a id="sas" class="anchor" href="#sas" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS</h3>
 
-<p>SAS (Statistical Analysis Software)[1] is a software suite developed by SAS Institute for advanced analytics, multivariate analyses, business intelligence, data management, and predictive analytics.</p>
+<p>SAS (Statistical Analysis Software) is a software suite developed by SAS Institute for advanced analytics, multivariate analyses, business intelligence, data management, and predictive analytics.</p>
 
 <p>SAS was developed at North Carolina State University from 1966 until 1976, when SAS Institute was incorporated. SAS was further developed in the 1980s and 1990s with the addition of new statistical procedures, additional components and the introduction of JMP. A point-and-click interface was added in version 9 in 2004. A social media analytics product was added in 2010.</p>
 
