--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <h1 id="project_title">Troy Le</h1>
           <h2 id="project_tagline">Data Analytics, Machine Learning, Data Science</h2>
-
+          <p class="home">Home<a href="http://machinelearning2014.github.io/troyle.github.io/"></a></p>
             <section id="downloads">
               <!--a class="zip_download_link" href="https://github.com/machinelearning2014/troyle.github.io/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/machinelearning2014/troyle.github.io/tarball/master">Download this project as a tar.gz file</a-->
