--- a/sas.html
+++ b/sas.html
@@ -20,7 +20,7 @@
 
           <h1 id="project_title">SAS</h1>
           <h2 id="project_tagline">The Universal Enterprise Data Language</h2>
-          <p class="home">Home<a href="http://machinelearning2014.github.io/troyle.github.io/"></a></p>
+          <p class="home">Home<a href="http://machinelearning2014.github.io/troyle.github.io/">Home</a></p>
             <!--section id="downloads">
               <a class="zip_download_link" href="https://github.com/machinelearning2014/troyle.github.io/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/machinelearning2014/troyle.github.io/tarball/master">Download this project as a tar.gz file</a>
