--- a/sas.html
+++ b/sas.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="SAS : The Universal Enterprise Data Language">
+    <meta name="description" content="Troy Le : Data Analytics, Machine Learning, Data Science">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,8 +19,12 @@
           <!-- a id="forkme_banner" href="https://github.com/machinelearning2014/troyle.github.io">View on GitHub</a-->
 
           <h1 id="project_title">SAS</h1>
-          <h2 id="project_tagline">The Universal Enterprise Data Language</h2>
-          <p class="home">Home<a href="http://machinelearning2014.github.io/troyle.github.io/">Home</a></p>
+          <h2 id="project_tagline">The Enterprise Data Language</h2>
+          <p class="navigate"><a href="http://machinelearning2014.github.io/troyle.github.io/">Home</a>
+                              <a href="http://machinelearning2014.github.io/troyle.github.io/SAS">SAS</a>
+                              <a href="http://machinelearning2014.github.io/troyle.github.io/Python">Python</a>
+                              <a href="http://machinelearning2014.github.io/troyle.github.io/R">R</a>
+          </p>
             <!--section id="downloads">
               <a class="zip_download_link" href="https://github.com/machinelearning2014/troyle.github.io/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/machinelearning2014/troyle.github.io/tarball/master">Download this project as a tar.gz file</a>
@@ -32,13 +36,10 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="the basics" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome.</h3>
+<a id="welcomes" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome.</h3>
 
-<p>There are 5 things you need to know about SAS</p>
-<p>PROCs</p>
-<p>Data Steps</p>
-<p>Marco Variables</p>
-<p>Macro Statements</p>
+<p>This website contains a collection of short cookbook-style topics in Data Analytics, Machine Learning, and Data Science using SAS, Python, and R.<!--a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a--></p>
+
 <h3>
 <a id="sas" class="anchor" href="#sas" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS</h3>
 
@@ -89,4 +90,3 @@
 
   </body>
 </html>
-
