--- a/sas.html
+++ b/sas.html
@@ -21,9 +21,9 @@
           <h1 id="project_title">SAS</h1>
           <h2 id="project_tagline">The Enterprise Data Language</h2>
           <p class="navigate"><a href="http://machinelearning2014.github.io/troyle.github.io/">Home</a>
-                              <a href="http://machinelearning2014.github.io/troyle.github.io/sas">SAS</a>
-                              <a href="http://machinelearning2014.github.io/troyle.github.io/python">Python</a>
-                              <a href="http://machinelearning2014.github.io/troyle.github.io/r">R</a>
+                              <a href="http://machinelearning2014.github.io/troyle.github.io/sas/">SAS</a>
+                              <a href="http://machinelearning2014.github.io/troyle.github.io/python/">Python</a>
+                              <a href="http://machinelearning2014.github.io/troyle.github.io/r/">R</a>
           </p>
             <!--section id="downloads">
               <a class="zip_download_link" href="https://github.com/machinelearning2014/troyle.github.io/zipball/master">Download this project as a .zip file</a>
