--- a/sas.html
+++ b/sas.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Troy Le : Data Analytics, Machine Learning, Data Science">
+    <meta name="description" content="SAS : The Enterprise Data Language">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -36,10 +36,27 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcomes" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome.</h3>
+<a id="basics" class="anchor" href="#basics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS Language Elements</h3>
 
-<p>This website contains a collection of short cookbook-style topics in Data Analytics, Machine Learning, and Data Science using SAS, Python, and R.<!--a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a--></p>
-
+<p>The SAS language consists of statements, expressions, options, formats, and functions similar to those of many other programming languages. In SAS, you use these elements within one of two groups of SAS statements:</p>
+<p></p>
+<p>DATA Steps & bull</p>
+<p></p>
+<p>PROC Steps & bull</p>
+<p></p>
+<p>A DATA step consists of a group of statements in the SAS language that can perform the following tasks:</p>
+<p></p>
+<p>DATA Steps</p>
+<p></p>
+<p>PROC Steps</p>
+<p></p>
+<p>read data from external files & bull</p>
+<p></p>
+<p>write data to external files & bull</p>
+<p></p>
+<p>read SAS data sets and SAS views & bull</p>
+<p></p>
+<p>create SAS data sets and SAS views & bull</p>
 <h3>
 <a id="sas" class="anchor" href="#sas" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS</h3>
 
