--- a/sas.html
+++ b/sas.html
@@ -39,24 +39,21 @@
 <a id="basics" class="anchor" href="#basics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS Language Elements</h3>
 
 <p>The SAS language consists of statements, expressions, options, formats, and functions similar to those of many other programming languages. In SAS, you use these elements within one of two groups of SAS statements:</p>
-<p></p>
-<p>DATA Steps & bull</p>
-<p></p>
-<p>PROC Steps & bull</p>
-<p></p>
+<br>
+<ul>
+  <li>DATA Steps</li>
+  <li>PROC Steps</li>
+</ul>
+<br>
 <p>A DATA step consists of a group of statements in the SAS language that can perform the following tasks:</p>
-<p></p>
-<p>DATA Steps</p>
-<p></p>
-<p>PROC Steps</p>
-<p></p>
-<p>read data from external files & bull</p>
-<p></p>
-<p>write data to external files & bull</p>
-<p></p>
-<p>read SAS data sets and SAS views & bull</p>
-<p></p>
-<p>create SAS data sets and SAS views & bull</p>
+<br>
+<ul>
+  <li>read data from external files</li>
+  <li>write data to external files</li>
+  <li>read SAS data sets and SAS views</li>
+  <li>create SAS data sets and SAS views</li>
+</ul>
+<br>
 <h3>
 <a id="sas" class="anchor" href="#sas" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS</h3>
 
