--- a/sas.html
+++ b/sas.html
@@ -25,6 +25,7 @@
                               <a href="http://machinelearning2014.github.io/troyle.github.io/python.html">Python  </a>
                               <a href="http://machinelearning2014.github.io/troyle.github.io/r.html">R</a>
           </p>
+          <img src="sas.png" alt="sas image" width="42" height="42">
             <!--section id="downloads">
               <a class="zip_download_link" href="https://github.com/machinelearning2014/troyle.github.io/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/machinelearning2014/troyle.github.io/tarball/master">Download this project as a tar.gz file</a>
