--- a/sas.html
+++ b/sas.html
@@ -25,7 +25,6 @@
                               <a href="http://machinelearning2014.github.io/troyle.github.io/python.html">Python  </a>
                               <a href="http://machinelearning2014.github.io/troyle.github.io/r.html">R</a>
           </p>
-          <img src="sas.png" alt="sas image" width="42" height="42">
             <!--section id="downloads">
               <a class="zip_download_link" href="https://github.com/machinelearning2014/troyle.github.io/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/machinelearning2014/troyle.github.io/tarball/master">Download this project as a tar.gz file</a>
@@ -37,7 +36,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="basics" class="anchor" href="#basics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS Language Elements</h3>
+<a id="basics" class="anchor" href="#basics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS Language Elements<img src="sas.png" alt="sas image" width="42" height="42"></h3>
 
 <p>The SAS language consists of statements, expressions, options, formats, and functions similar to those of many other programming languages. In SAS, you use these elements within one of two groups of SAS statements:</p>
 <br>
