--- a/sas.html
+++ b/sas.html
@@ -36,7 +36,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="basics" class="anchor" href="#basics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS Language Elements<img src="sas.png" alt="sas image" width="42" height="42"></h3>
+<a id="basics" class="anchor" href="#basics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SAS Language Elements<!--img src="sas.png" alt="sas image" width="42" height="42"--></h3>
 
 <p>The SAS language consists of statements, expressions, options, formats, and functions similar to those of many other programming languages. In SAS, you use these elements within one of two groups of SAS statements:</p>
 <br>
